@@ -1,18 +1,14 @@
 package org.firstinspires.ftc.teamcode.blucru.common.subsytems.drivetrain.localization;
 
-import android.os.SystemClock;
-
-import org.firstinspires.ftc.teamcode.blucru.common.util.Globals;
 import org.firstinspires.ftc.teamcode.blucru.common.util.Pose2d;
 
 import java.util.LinkedList;
 
 public class PoseHistory {
 
-    private static double STORAGE_NANOSECONDS = 2 * Math.pow(10,9);
+    private static final long STORAGE_NANOSECONDS = 1_000_000_000L; // 1 second
 
-    private LinkedList<PoseMarker> poseList;
-
+    private final LinkedList<PoseMarker> poseList;
 
     public PoseHistory(){
         poseList = new LinkedList<>();
@@ -21,46 +17,58 @@ public class PoseHistory {
     public void add(Pose2d pose, Pose2d vel){
         poseList.addFirst(new PoseMarker(pose, vel));
 
-        //remove old poses
-        long currentTime = (long) (System.currentTimeMillis() * Math.pow(10, 6));
-        while (!poseList.isEmpty() && currentTime - poseList.getLast().nanoTime > STORAGE_NANOSECONDS){
+        // PoseMarker timestamps with System.nanoTime() — eviction must use the same clock.
+        long now = System.nanoTime();
+        while (!poseList.isEmpty() && now - poseList.getLast().nanoTime > STORAGE_NANOSECONDS){
             poseList.removeLast();
         }
     }
 
     public PoseMarker getPoseAtTime(long nanoTime){
-        PoseMarker poseMarkerAfterTime = poseList.get(0);
-        PoseMarker poseMarkerBeforeTime = poseList.get(0);
-        Globals.telemetry.addData("list size", poseList.size());
-        Globals.telemetry.addData("nanoTime", nanoTime);
-        Globals.telemetry.addData("oth index time", poseList.get(0).nanoTime);
-        Globals.telemetry.addData("last index time", poseList.getLast().nanoTime);
-        for(PoseMarker poseMarker: poseList){
+        if (poseList.isEmpty()) return null;
+
+        PoseMarker newest = poseList.getFirst();
+        PoseMarker oldest = poseList.getLast();
+        if (nanoTime >= newest.nanoTime) return newest;
+        if (nanoTime <= oldest.nanoTime) return oldest;
+
+        PoseMarker before = newest;
+        PoseMarker after = newest;
+        for (PoseMarker poseMarker : poseList){
             if (poseMarker.nanoTime < nanoTime){
-                poseMarkerBeforeTime = poseMarker;
+                before = poseMarker;
                 break;
             } else {
-                poseMarkerAfterTime = poseMarker;
+                after = poseMarker;
             }
         }
 
-        Pose2d poseBefore = poseMarkerBeforeTime.getPose();
-        Pose2d poseAfter = poseMarkerAfterTime.getPose();
+        Pose2d poseBefore = before.getPose();
+        Pose2d poseAfter = after.getPose();
 
-        long timeBefore = nanoTime - poseMarkerBeforeTime.nanoTime;
-        long timeAfter = poseMarkerAfterTime.nanoTime - nanoTime;
-
+        long timeBefore = nanoTime - before.nanoTime;
+        long timeAfter = after.nanoTime - nanoTime;
         long total = timeBefore + timeAfter;
 
-        double beforeMultiplier = (double) timeBefore / total;
-        double afterMultiplier = (double) timeAfter / total;
+        if (total <= 0) return before;
 
-        Pose2d poseBeforeForInterpolation = new Pose2d(poseBefore.getX() * beforeMultiplier, poseBefore.getY() * beforeMultiplier, poseBefore.getH() * beforeMultiplier);
-        Pose2d poseAfterForInterpolation = new Pose2d(poseAfter.getX() * afterMultiplier, poseAfter.getY() * afterMultiplier, poseAfter.getH() * afterMultiplier);
+        double afterMultiplier = (double) timeBefore / total;
+        double beforeMultiplier = (double) timeAfter / total;
 
-        Pose2d interpolatedPose = new Pose2d(poseBeforeForInterpolation.vec().addNotInPlace(poseAfterForInterpolation.vec()), poseBeforeForInterpolation.getH() + poseAfterForInterpolation.getH());
+        Pose2d poseBeforeForInterpolation = new Pose2d(
+                poseBefore.getX() * beforeMultiplier,
+                poseBefore.getY() * beforeMultiplier,
+                poseBefore.getH() * beforeMultiplier);
+        Pose2d poseAfterForInterpolation = new Pose2d(
+                poseAfter.getX() * afterMultiplier,
+                poseAfter.getY() * afterMultiplier,
+                poseAfter.getH() * afterMultiplier);
 
-        return new PoseMarker(interpolatedPose, poseMarkerBeforeTime.getVel());
+        Pose2d interpolatedPose = new Pose2d(
+                poseBeforeForInterpolation.vec().addNotInPlace(poseAfterForInterpolation.vec()),
+                poseBeforeForInterpolation.getH() + poseAfterForInterpolation.getH());
+
+        return new PoseMarker(interpolatedPose, before.getVel());
     }
 
     public void offset(Pose2d poseDelta){
@@ -71,5 +79,8 @@ public class PoseHistory {
 
     public String toString() {
         return poseList.toString();
+    }
+    public double size(){
+        return poseList.size();
     }
 }
